update image ML preprocessing

--- a/notebooks/4.1_preprocessing_RVL_ML.ipynb
+++ b/notebooks/4.1_preprocessing_RVL_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b44f2640-f7c4-476f-af1f-1023cb4c1e26",
    "metadata": {},
    "outputs": [],
@@ -16,8 +16,16 @@
     "import matplotlib.pyplot as plt\n",
     "from joblib import Parallel, delayed\n",
     "import gc\n",
-    "import time\n",
-    "\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c4d12175-1e58-4f3b-a327-9a5a0bdacd5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
@@ -25,9 +33,21 @@
     "if not project_root in [Path(p).resolve() for p in sys.path]:\n",
     "    sys.path.append(str(project_root))\n",
     "\n",
-    "from src import PATHS\n",
-    "\n",
-    "df = pd.read_parquet(os.path.join(PATHS.metadata, \"df_filename_relative_path.parquet\"))"
+    "from src import PATHS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9dfb849-d0f4-49b8-b443-a483d31cec26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = PATHS.data / pd.read_parquet(PATHS.metadata / \"df_filepaths.parquet\")[[\"rvl_image_path\"]]\n",
+    "df.rename(columns = {\"rvl_image_path\": \"input_path\"}, inplace=True)\n",
+    "df[\"output_path\"] = PATHS.processed_data / \"ML_images_100x100\" / df[\"input_path\"].apply(lambda x: x.relative_to(PATHS.rvl_cdip_images))\n",
+    "df[\"output_dir\"] = df[\"output_path\"].apply(lambda x:x.parent)\n",
+    "df"
    ]
   },
   {
@@ -85,7 +105,7 @@
     "\n",
     "    if valid_rows.max() == 0 or valid_cols.max() == 0:\n",
     "        # Aucun texte détecté\n",
-    "        return {'top': 0, 'bottom': height, 'left': 0, 'right': width}\n",
+    "        return 0, height, 0, width\n",
     "\n",
     "    # Marges haut/bas (avec décalage)\n",
     "    top = np.argmax(valid_rows > 0) + top_bottom_ignore\n",
@@ -115,14 +135,6 @@
    "source": [
     "# en fait, pas besoin d'une fonction vu qu'elle existe déjà x)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "417d57c4-18f3-4743-be5c-9f7a2ef091ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -157,25 +169,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48d6cb82-681c-4fa3-84c6-494bfc6c7faa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "80c42085-6934-4713-ae90-075d1aa26e99",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. on récupère l'image\n",
-    "relative_filepath, filename = df.iloc[5, :]\n",
-    "file_path = os.path.join(rvl_cdip_images_path, relative_filepath, filename)\n",
-    "print(relative_filepath)\n",
-    "print(file_path, filename)\n",
+    "file_path = df.iloc[5,:][\"rvl_image_path\"]\n",
     "img = cv2.imread(file_path, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "# 2. Détection des marges et recadrage\n",
@@ -307,12 +306,7 @@
     "        return f\"Erreur traitement {input_path}: {e}\"\n",
     "\n",
     "def parallelisation(df, n_jobs=5):\n",
-    "    df[\"input_path\"] = rvl_cdip_images_path + os.sep + df[\"relative_path\"] + os.sep + df[\"filename\"]\n",
-    "\n",
-    "    df[\"output_dir\"] = df[\"relative_path\"].apply(\n",
-    "        lambda rp: os.path.join(processed_data_path, 'ML_images_100x100', 'RVL-CDIP', 'images', rp))\n",
-    "    df[\"output_path\"] = df.apply(\n",
-    "        lambda row: os.path.join(row[\"output_dir\"], row[\"filename\"]),axis=1)\n",
+    "    \n",
     "    data = df.to_dict(\"records\")\n",
     "    results = Parallel(n_jobs=n_jobs, backend='loky')(\n",
     "        delayed(new_image)(row) for row in data\n",
@@ -339,14 +333,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61fd5476-b560-4b33-92aa-5e3eb9f2d5f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "2e4065ce-4a56-441d-9952-6e59db373a24",
    "metadata": {},
@@ -357,17 +343,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5c0eba6-4bd6-4f8f-a251-14e8ce9802a6",
+   "id": "2dab1c50-4d18-4b15-baae-fa541621b4ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "def images_to_pixel_dataframe(df, include_labels=False, label_column=None):\n",
     "    records = []\n",
     "    failed = []\n",
-    "    filenames = []\n",
-    "    file_paths = []\n",
+    "    indices=[]\n",
     "\n",
-    "    for _, row in df.iterrows():\n",
+    "    for index, row in df.iterrows():\n",
     "        path = row[\"output_path\"]\n",
     "        try:\n",
     "            img = cv2.imread(path, cv2.IMREAD_GRAYSCALE)\n",
@@ -378,8 +363,7 @@
     "            if include_labels and label_column in row:\n",
     "                flat = np.append(flat, row[label_column])\n",
     "            records.append(flat)\n",
-    "            filenames.append(row[\"filename\"])\n",
-    "            file_paths.append(row[\"relative_path\"])\n",
+    "            indices.append(index)\n",
     "        except Exception as e:\n",
     "            failed.append(path)\n",
     "\n",
@@ -388,9 +372,7 @@
     "    if include_labels:\n",
     "        col_names.append(label_column)\n",
     "\n",
-    "    df_pixels = pd.DataFrame(records, columns=col_names)\n",
-    "    df_pixels[\"filename\"] = filenames\n",
-    "    df_pixels[\"file_path\"] = file_paths\n",
+    "    df_pixels = pd.DataFrame(records, columns=col_names, index=indices)\n",
     "\n",
     "    return df_pixels, failed\n",
     "\n",
@@ -398,8 +380,8 @@
     "# ===============================\n",
     "#  Traitement par batch\n",
     "# ===============================\n",
-    "def process_in_batches(df, batch_size, processed_data_path, label_column=None):\n",
-    "    output_dir = os.path.join(processed_data_path, \"ML_images_100x100\")\n",
+    "def process_in_batches(df, batch_size, label_column=None):\n",
+    "    output_dir = PATHS.processed_data / \"ML_images_100x100\"\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "    total_batches = len(df) // batch_size + int(len(df) % batch_size != 0)\n",
@@ -410,20 +392,12 @@
     "        df_batch = df.iloc[i * batch_size:(i + 1) * batch_size].copy()\n",
     "        print(f\" Batch {i+1}/{total_batches} - {len(df_batch)} images\")\n",
     "\n",
-    "        # Construction des chemins\n",
-    "        df_batch[\"output_dir\"] = df_batch[\"relative_path\"].apply(\n",
-    "            lambda rp: os.path.join(processed_data_path, 'ML_images_100x100', 'RVL-CDIP', 'images', rp)\n",
-    "        )\n",
-    "        df_batch[\"output_path\"] = df_batch.apply(\n",
-    "            lambda row: os.path.join(row[\"output_dir\"], row[\"filename\"]), axis=1\n",
-    "        )\n",
-    "\n",
     "        # Traitement du batch\n",
     "        df_pixels, failed = images_to_pixel_dataframe(df_batch, include_labels=label_column is not None, label_column=label_column)\n",
     "        all_failed.extend(failed)\n",
     "\n",
     "        # Sauvegarde du parquet\n",
-    "        batch_file = os.path.join(output_dir, f\"df_pixels_batch_{i:04d}.parquet\")\n",
+    "        batch_file = output_dir / f\"df_pixels_batch_{i:04d}.parquet\"\n",
     "        df_pixels.to_parquet(batch_file)\n",
     "        print(f\" Batch {i+1} terminé en {time.time() - t0:.2f} sec - {len(df_pixels)} images traitées\")\n",
     "\n",
@@ -441,16 +415,16 @@
     "# ===============================\n",
     "#  Concaténation finale\n",
     "# ===============================\n",
-    "def concat_all_batches(processed_data_path):\n",
-    "    output_dir = os.path.join(processed_data_path, \"ML_images_100x100\")\n",
+    "def concat_all_batches():\n",
+    "    output_dir = PATHS.processed_data / \"ML_images_100x100\"\n",
     "    parquet_files = sorted([\n",
     "        os.path.join(output_dir, f) for f in os.listdir(output_dir)\n",
     "        if f.startswith(\"df_pixels_batch_\") and f.endswith(\".parquet\")\n",
     "    ])\n",
     "\n",
     "    print(f\" Concaténation de {len(parquet_files)} fichiers...\")\n",
-    "    df_all = pd.concat([pd.read_parquet(f) for f in parquet_files], ignore_index=True)\n",
-    "    df_all.to_parquet(os.path.join(output_dir, \"df_pixels.parquet\"))\n",
+    "    df_all = pd.concat([pd.read_parquet(f) for f in parquet_files])\n",
+    "    df_all.to_parquet(PATHS.processed_data / \"df_pixels.parquet\")\n",
     "    print(f\" Fichier final sauvegardé: df_pixels.parquet ({len(df_all)} images)\")\n",
     "\n",
     "# ===============================\n",
@@ -464,29 +438,28 @@
     "    \n",
     "    # Suppose que `df` et `processed_data_path` sont déjà définis\n",
     "    batch_size = 5000  # Ajuste si tu veux moins\n",
-    "    process_in_batches(df, batch_size, processed_data_path, label_column=None)\n",
-    "    concat_all_batches(processed_data_path)"
+    "    process_in_batches(df, batch_size, label_column=None)\n",
+    "    concat_all_batches()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75403be3-c1d6-4d11-9401-1dc8be3f78fc",
+   "id": "3154d528-d82b-4cde-87f3-afa7e62276d1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "concat_all_batches(PATHS.processed_data)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76247de7-1dbe-4f42-8f40-6fd8227b2ad2",
+   "cell_type": "raw",
+   "id": "5b1115d4-598e-4a27-931a-354dcab540ba",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def images_to_pixel_dataframe(df, include_labels=False, label_column=None):\n",
     "    records = []\n",
     "    failed = []\n",
-    "    filenames = []\n",
     "    file_paths = []\n",
     "\n",
     "    for _, row in df.iterrows():\n",
@@ -500,8 +473,7 @@
     "            if include_labels and label_column in row:\n",
     "                flat = np.append(flat, row[label_column])\n",
     "            records.append(flat)\n",
-    "            filenames.append(row[\"filename\"])\n",
-    "            file_paths.append(row[\"relative_path\"])\n",
+    "            file_paths.append(str(row[\"input_path\"]))\n",
     "        except Exception as e:\n",
     "            print(f\"Erreur avec {path}: {e}\")\n",
     "            failed.append(path)\n",
@@ -512,45 +484,231 @@
     "        col_names.append(label_column)\n",
     "\n",
     "    df_pixels = pd.DataFrame(records, columns=col_names)\n",
-    "    df_pixels[\"filename\"] = filenames\n",
     "    df_pixels[\"file_path\"] = file_paths\n",
     "\n",
     "    return df_pixels, failed"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f8a18ae-be67-47bb-aba8-1c5b05ecf8fe",
+   "cell_type": "raw",
+   "id": "1d6f3941-1362-4bbe-85e4-ac2fe57c9afb",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Sélection de 100 lignes aléatoires\n",
     "#df_sample = df.sample(n=1000, random_state=42)  # random_state pour reproductibilité\n",
-    "\n",
     "t0 = time.time()\n",
+    "\n",
     "# Création du DataFrame des pixels\n",
-    "df[\"output_dir\"] = df[\"relative_path\"].apply(\n",
-    "        lambda rp: os.path.join(processed_data_path, 'ML_images_100x100', 'RVL-CDIP', 'images', rp))\n",
-    "df[\"output_path\"] = df.apply(\n",
-    "        lambda row: os.path.join(row[\"output_dir\"], row[\"filename\"]),axis=1)\n",
     "df_pixels, erreurs = images_to_pixel_dataframe(df)\n",
-    "df_pixels.to_parquet(os.path.join(processed_data_path,\"ML_images_100x100\", \"df_pixels.parquet\"))\n",
+    "df_pixels.to_parquet(PATHS.processed_data / \"ML_images_100x100\" / \"df_pixels.parquet\")\n",
     "print(f\"Durée d'exécution: {time.time() - t0:.2f} secondes pour {len(df)} images\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f5ee9a1-9b89-4a9b-8c7d-b38d0464ea09",
+   "id": "5f3d54a6-2f1d-4564-bd82-28013ba82c60",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "cc2747ca-738d-489b-b657-c6990cb3ba9b",
+   "metadata": {},
+   "source": [
+    "## 6. Completion du fichier avec fonction simple pour les données manquantes\n",
+    "A permis la mmise à jour de certaines fonctions. Ne devrait plus être utile maintenant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f7589b1-647c-43da-a3a3-7942c2e3a140",
+   "metadata": {},
+   "source": [
+    "### 6.1 Identification des données manquantes    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b71a877-0bf2-4be2-9a03-3be5d1b35048",
+   "id": "18a1f5c5-f079-46de-870e-9244a749bb7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "created = pd.read_parquet(PATHS.processed_data / \"df_pixels.parquet\")\n",
+    "len(created)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e358d029-8a09-4335-941b-94f2bc3842f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_missing = df[~df.index.isin(created.index)]\n",
+    "df_missing.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54cac738-9879-4b9f-ab9d-57eaba9ed745",
+   "metadata": {},
+   "source": [
+    "### 6.2 Calcul des pixels manquants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ac3c0cc-d074-4b5d-a86b-d46a487a326f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indices = []\n",
+    "records = []\n",
+    "for index, row in df_missing.iterrows():\n",
+    "\n",
+    "    input_path = row['input_path']\n",
+    "    output_path = row['output_path']\n",
+    "    output_dir = row['output_dir']\n",
+    "    img = cv2.imread(input_path, cv2.IMREAD_GRAYSCALE)\n",
+    "    if img is None:\n",
+    "        print(f\"Erreur lecture: {input_path}\")\n",
+    "    top, bottom, left, right = marges(img)\n",
+    "    cropped = img[top:bottom, left:right]\n",
+    "    img_resized = cv2.resize(cropped, (100, 100))\n",
+    "    flat = img_resized.flatten().astype(np.uint8)  # moins de RAM\n",
+    "    records.append(flat)\n",
+    "    indices.append(index)\n",
+    "\n",
+    "n_pixels = 100 * 100\n",
+    "col_names = [f'p_{i}' for i in range(n_pixels)]\n",
+    "df_missing_pixels = pd.DataFrame(records, columns=col_names, index=indices)\n",
+    "\n",
+    "df_missing_pixels.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f180ab61-595c-47ea-9371-5a234f3bd688",
+   "metadata": {},
+   "source": [
+    "### 6.3 Ajout à la df pixels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e3dd622-3e39-432c-be4a-c6daeb7682d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat((created, df_missing_pixels)).sort_index().to_parquet(PATHS.processed_data / \"df_pixels.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "377e495c-2bda-499b-9e4a-43d80b3059a1",
+   "metadata": {},
+   "source": [
+    "## 7. Concatenation avec les features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fd372a70-8538-48ee-9b7d-21b00fb3c65a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pixels = pd.read_parquet(PATHS.processed_data / \"df_pixels.parquet\")\n",
+    "features = pd.read_parquet(PATHS.processed_data / \"df_img_features.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "76cd329b-af82-4639-9aed-b3819ce33846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features.drop(columns=['Compression'], inplace=True) # trop peu de variation\n",
+    "features = features[[\n",
+    "    'top_marge', 'bottom_marge', 'left_marge', 'right_marge', 'nb_lignes',\n",
+    "    'nb_colonnes', 'Nettete', 'Bruit', 'Ratio_b', 'Ratio_n', 'Entropie',\n",
+    "    'width']].rename(columns = {\n",
+    "    'top_marge': 'top_marge',\n",
+    "    'bottom_marge': 'bottom_marge',\n",
+    "    'left_marge': 'left_marge',\n",
+    "    'right_marge': 'right_marge',\n",
+    "    'nb_lignes': 'nb_lignes',\n",
+    "    'nb_colonnes': 'nb_colonnes',\n",
+    "    'Nettete': 'sharpness',\n",
+    "    'Bruit': 'noise',\n",
+    "    'Ratio_b': 'ratio_b',\n",
+    "    'Ratio_n': 'ratio_n',\n",
+    "    'Entropie': 'entropy',\n",
+    "    'width': 'width'\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1e4fdaff-401b-40eb-8c0b-9a55aee6e9b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_features_pixels = features.join(pixels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "50fb2b0d-dd97-4988-aee3-febf7b535de1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_features_pixels.to_parquet(PATHS.processed_data / \"df_img_features_pixels.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2884a1a-686c-45cc-8fee-d8f21325b81d",
+   "metadata": {},
+   "source": [
+    "## 8. Suppression des fichiers temporaires"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "235352e2-be02-452e-88ef-4b4d9b97cb8d",
+   "metadata": {},
+   "source": [
+    "# Suppression de tous les fichiers temporaires\n",
+    "# Réactiver la cellule pour utiliser\n",
+    "# ATTENTION: ACTION IRREVERSIBLE\n",
+    "\n",
+    "for path in [\n",
+    "    PATHS.processed_data / \"df_img_features.parquet\",\n",
+    "    PATHS.processed_data / \"df_pixels.parquet\"\n",
+    "]:\n",
+    "    if path.exists():\n",
+    "        path.unlink()\n",
+    "        print(str(path), \"supprimé.\")\n",
+    "\n",
+    "import shutil\n",
+    "path = PATHS.processed_data / \"ML_images_100x100\"\n",
+    "if path.exists():\n",
+    "    shutil.rmtree(str(path))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66a834f5-dc8f-4df5-ab31-025b0145220f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -572,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
