--- a/notebooks/6.3-txt-DL.ipynb
+++ b/notebooks/6.3-txt-DL.ipynb
@@ -54,6 +54,7 @@
     "import joblib\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import tensorflow as tf\n",
@@ -104,11 +105,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c393500c-0d68-48bd-b54a-a8e324c7a005",
+   "cell_type": "raw",
+   "id": "21ee4d97-c131-48a3-8100-fa63cb37ae61",
    "metadata": {},
-   "outputs": [],
    "source": [
     "sample = pd.read_parquet(PATHS.samples / 'df_documents_sample_4k_3.parquet')\n",
     "features = features.join(sample, how='inner')\n",
@@ -212,7 +211,7 @@
     "\n",
     "# Entraînement\n",
     "first_mlp.fit(X_train_vect.toarray(), y_train,\n",
-    "              epochs=5, batch_size=32,\n",
+    "              epochs=20, batch_size=32,\n",
     "              validation_data=(X_val_vect.toarray(), y_val))\n"
    ]
   },
@@ -225,6 +224,16 @@
    "source": [
     "y_pred = np.argmax(first_mlp.predict(X_val_vect), axis=1)\n",
     "print(classification_report(y_val, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae149690-0df6-431b-a232-80bf30efedff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_mlp.save(PATHS.models / \"txt_mlp1.keras\")"
    ]
   },
   {
@@ -243,7 +252,7 @@
    "outputs": [],
    "source": [
     "# Modèle MLP léger (scikit-learn)\n",
-    "second_mlp = MLPClassifier(hidden_layer_sizes=(100,), max_iter=300, random_state=42)\n",
+    "second_mlp = MLPClassifier(hidden_layer_sizes=(100,), max_iter=50, random_state=42)\n",
     "second_mlp.fit(X_train_vect, y_train)"
    ]
   },
@@ -256,6 +265,16 @@
    "source": [
     "y_pred = second_mlp.predict(X_val_vect)\n",
     "print(classification_report(y_val, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfd490ca-34ba-42ba-82f4-be54b5afc582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(second_mlp, PATHS.models / \"txt_mlp2.joblib\")"
    ]
   },
   {
@@ -305,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e2c8105-8bf4-4387-ae7a-048e59dccbc5",
+   "id": "cbe7f2ba-919b-4b53-b9d1-b32d5b53e4e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,20 +335,11 @@
     "    'learning_rate': ['constant', 'adaptive']\n",
     "}\n",
     "\n",
-    "grid = GridSearchCV(MLPClassifier(max_iter=10, random_state=42), param_grid, cv=3, scoring='accuracy', verbose=2)\n",
+    "grid = GridSearchCV(MLPClassifier(max_iter=50, random_state=42), param_grid, cv=3, scoring='accuracy', verbose=2)\n",
+    "# Attention: pour des max_iter a 50: environ 10' par fit x 3 cv x (4 x 2 x 3 x 2 = 48) params -> 1440' = 24 heures\n",
     "grid.fit(X_train_vect, y_train)\n",
     "\n",
     "print(\"Meilleurs paramètres :\", grid.best_params_)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a8d22a3-bf5e-4d4d-8a57-10b50c51ca97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(classification_report(y_val, y_pred, target_names=encoder.classes_.astype(str)))\n"
    ]
   },
   {
@@ -339,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Meilleurs paramètres : {'activation': 'tanh', 'alpha': 0.0001, 'hidden_layer_sizes': (128, 64), 'learning_rate': 'constant'}"
+    "# Meilleurs paramètres : {'activation': 'relu', 'alpha': 0.01, 'hidden_layer_sizes': (128, 64), 'learning_rate': 'constant'}"
    ]
   },
   {
@@ -349,74 +359,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "third_mlp = MLPClassifier(hidden_layer_sizes=(128,64), max_iter=300, random_state=42, activation='tanh')\n",
+    "third_mlp = MLPClassifier(hidden_layer_sizes=(128,64), max_iter=100, random_state=42, activation='relu', alpha=0.01)\n",
     "third_mlp.fit(X_train_vect, y_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2de2770f-4e56-49ee-942a-b29844ad71ed",
+   "id": "974e7baf-a753-4b7a-bb26-c9d375f39c9c",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8ee776b-4216-4798-97e0-f844caac3726",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "598ee947-1a8d-49cc-8678-a1db53ff21b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e703a149-ec5a-4d7c-9bf8-c4205b37c76e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36321eda-fc7f-497d-bc56-bed46332ada4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55c377b2-d99c-49eb-b895-1ae2b6918990",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c4ac144-e5b7-4373-8986-3e9823029645",
-   "metadata": {},
    "source": [
-    "# 5. Sauvegarde du modèle"
+    "y_pred = third_mlp.predict(X_val_vect)\n",
+    "print(classification_report(y_val, y_pred))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8a19841-2849-4a68-8277-5041608f4bb2",
+   "id": "fdac0bfd-b814-41a6-99d5-d2ea310449f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_mlp.save(PATHS.models / \"txt_mlp.keras\")"
+    "# Matrice de confusion\n",
+    "cm = confusion_matrix(y_val, y_pred)\n",
+    "\n",
+    "# Création de la heatmap\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\")\n",
+    "\n",
+    "plt.xlabel(\"Prédit\")\n",
+    "plt.ylabel(\"Réel\")\n",
+    "plt.title(\"Matrice de confusion - MLPClassifier\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e056c55c-6b58-487c-9e61-3461662db5cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(third_mlp.loss_curve_)\n",
+    "plt.title(\"Courbe de perte - MLP\")\n",
+    "plt.xlabel(\"Itérations\")\n",
+    "plt.ylabel(\"Loss\")\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43fb10e7-b0f1-4d7d-b0b5-0f069d71bc0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(third_mlp, PATHS.models / \"txt_mlp3.joblib\")"
    ]
   }
  ],
