SGD loss modified to log_loss for ModelWrapping

--- a/notebooks/5.1_RVL_CDIP_ML.ipynb
+++ b/notebooks/5.1_RVL_CDIP_ML.ipynb
@@ -53,7 +53,9 @@
   {
    "cell_type": "markdown",
    "id": "b6985dcb-54ae-4775-8fbf-0aaee89e8976",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# 1. Premiers essais\n",
     "On va travailler sur un échantillon d'abord, parce que sinon je n'ai pas assez de RAM"
@@ -946,6 +948,15 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "f023eb52-1937-4e6d-abc0-c24e48f3534f",
+   "metadata": {},
+   "source": [
+    "# a utiliser si le fit a deja ete fait\n",
+    "pipeline = joblib.load(PATHS.models / \"img_ml_pipeline.joblib\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fef1f655-f5b6-4e75-a4e9-e0e79764c008",
@@ -971,7 +982,9 @@
   {
    "cell_type": "markdown",
    "id": "30e8ea58-bdd8-4594-ae8b-78a2234c57aa",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### LGBM"
    ]
@@ -1037,7 +1050,9 @@
   {
    "cell_type": "markdown",
    "id": "5c9ac080-dd6f-445b-b6f9-d954fc35085b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### XGB Classifier"
    ]
@@ -1124,7 +1139,10 @@
     "\n",
     "\n",
     "clf = SGDClassifier(\n",
-    "    loss = 'squared_hinge',\n",
+    "    # exception_aux best_params pour permettre la mise dans un ModelWrapper\n",
+    "    # avec une fonction predict_proba (squared_hinge ne permet pas cela)\n",
+    "    # loss = 'squared_hinge',\n",
+    "    loss = 'log_loss', \n",
     "    penalty = 'l1',\n",
     "    alpha = 0.0069955313416296735,\n",
     "    max_iter = 1102,\n",
